--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-        <title>NoPaste - No-database paste service</title>
+        <title>swl.li - Database-Free paste service</title>
         <link
             rel="stylesheet"
             type="text/css"
@@ -54,13 +54,13 @@ npm/microtip@0.2.2/microtip.min.css
         <div id="controls" class="container-fluid shadow-bottom hide-readonly">
             <div class="row align-items-center justify-content-end my-1">
                 <div class="col-auto mb-1">
-                    <h1 class="my-0"><span>{</span> NoPaste <span>}</span></h1>
+                    <h1 class="my-0"><span></span>swl.li<span></span></h1>
                 </div>
                 <div class="col-auto">
                     <a
                         href="javascript:void(0)"
                         class="mx-3"
-                        aria-label="Click to know more about NoPaste"
+                        aria-label="Click to know more about swl.li"
                         data-microtip-position="bottom"
                         role="tooltip"
                         data-micromodal-trigger="description-modal"
